initial html format

--- a/index.html
+++ b/index.html
@@ -12,5 +12,18 @@
 <body>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png">
     <h1>Ghibli Review App</h1>
+
+    <select>
+        <option value="" selected disabled>Choose Film</option>
+    </select>
+
+    <div></div>
+
+    <form>
+        <input id="text" type="text">
+        <input id="submit" type="submit">
+    </form>
+
+    <ul></ul>
 </body>
 </html>
