--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <option value="" selected disabled>Choose Film</option>
     </select>
 
-    <div></div>
+    <div id="info"></div>
 
     <form>
         <input id="text" type="text">
